--- a/index.html
+++ b/index.html
@@ -36,6 +36,20 @@
     </div>
   </div>
   
+  <div class="publications">
+      <div class="title-pub">
+        <p class=title-med>
+          Promos
+        </p>
+      </div>
+      <div class="textbox">
+        <ul class="list">
+          <li> 2022 <a href="./postbac/index.html"> [Lien] </a> </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  
 </body>
 
 </html>
