--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </div>
       <div class="textbox">
         <ul class="list">
-          <li> 2022 <a href="./postbac/index.html"> [Lien] </a> </li>
+          <li> 2022 <a href="./postbac/2022/index.html"> [Lien] </a> </li>
         </ul>
       </div>
     </div>
